alpha/argocd-dev-branch/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argocd
spec:
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
